syntax = "proto3";

package gitops_core.v1;

option go_package = "github.com/weaveworks/weave-gitops/core/api";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "api/core/types.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
      title: "Weave GitOps Core API",
      version: "0.1";
      description: "The API handles operations for Weave GitOps Core";
    };
    consumes: "application/json";
    produces: "application/json";
};

service Core {
    /*
     * ListObjects lists primary objects from a cluster via GitOps.
     */
    rpc ListObjects(ListObjectsRequest) returns (ListObjectsResponse) {
        option (google.api.http) = {
            get : "/v1/object"
        };
    }

    /*
    * GetObject gets data about a single primary object from a cluster.
    */
    rpc GetObject(GetObjectRequest) returns (GetObjectResponse) {
        option (google.api.http) = {
            get : "/v1/object/{name}"
        };
    }

    // Misc
    /*
     * ListFluxRuntimeObjects lists the flux runtime deployments from a cluster.
     */
    rpc ListFluxRuntimeObjects(ListFluxRuntimeObjectsRequest) returns (ListFluxRuntimeObjectsResponse) {
        option (google.api.http) = {
          get : "/v1/flux_runtime_objects"
        };
    }

    /**
    * GetReconciledObjects returns a list of objects that were created as a result a Flux automation.
    * This list is derived by looking at the Kustomization or HelmRelease specified in the request body.
    */
    rpc GetReconciledObjects(GetReconciledObjectsRequest) returns (GetReconciledObjectsResponse) {
        option (google.api.http) = {
            post : "/v1/reconciled_objects"
            body: "*"
        };
    };

    /**
    * GetChildObjects returns the children of a given object, specified by a GroupVersionKind.
    * Not all Kubernets objects have children. For example, a Deployment has a child ReplicaSet, but a Service has no child objects.
    */
    rpc GetChildObjects(GetChildObjectsRequest) returns (GetChildObjectsResponse) {
        option (google.api.http) = {
            post : "/v1/child_objects"
            body: "*"
        };
    };

    /*
     * GetFluxNamespace returns with a namespace with a specific label.
     */
    rpc GetFluxNamespace(GetFluxNamespaceRequest) returns (GetFluxNamespaceResponse) {
        option (google.api.http) = {
            post: "/v1/namespace/flux"
            body: "*"
        };
    }

    /*
     * ListNamespaces returns with the list of available namespaces.
     */
    rpc ListNamespaces(ListNamespacesRequest) returns (ListNamespacesResponse) {
        option (google.api.http) = {
            get: "/v1/namespaces"
        };
    }
    /*
     * ListFluxEvents returns with a list of events based on Flux labels
     */
    rpc ListFluxEvents(ListFluxEventsRequest) returns (ListFluxEventsResponse) {
        option (google.api.http) = {
            get: "/v1/events"
        };
    }

    /*
     * SyncResource forces a reconciliation of a Flux resource
     */
    rpc SyncAutomation(SyncAutomationRequest) returns (SyncAutomationResponse) {
        option (google.api.http) = {
            post: "/v1/sync"
            body: "*"
        };
    }

    /*
     * GetVersion returns version information about the server
     */
    rpc GetVersion(GetVersionRequest) returns (GetVersionResponse){
        option (google.api.http) = {
            get: "/v1/version"
        };
    }

    /**
    * GetFeatureFlags returns configuration information about the server
    */
    rpc GetFeatureFlags(GetFeatureFlagsRequest) returns (GetFeatureFlagsResponse) {
        option (google.api.http) = {
            get : "/v1/featureflags"
        };
    }

    /*
     * ToggleSuspendResource suspends or resumes a flux object.
     */
    rpc ToggleSuspendResource(ToggleSuspendResourceRequest) returns (ToggleSuspendResourceResponse) {
        option (google.api.http) = {
            post: "/v1/suspend"
            body: "*"
        };
    }
}

message Pagination {
    int32 pageSize = 1;
    string pageToken = 2;
}

message ListError {
    string clusterName = 1;
    string namespace = 2;
    string message = 3;
}

message ListFluxRuntimeObjectsRequest {
    string namespace   = 1;
    string clusterName = 2;
}

message ListFluxRuntimeObjectsResponse {
    repeated Deployment deployments = 1;
    repeated ListError errors = 2;
}

message ListObjectsRequest {
    string namespace      = 1;
    string kind           = 2;
    Pagination pagination = 3;
}

message ListObjectsResponse {
    repeated Object objects   = 1;
    string nextPageToken      = 2;
    repeated ListError errors = 3;
}

message GetObjectRequest {
    string name        = 1;
    string namespace   = 2;
    string kind        = 3;
    string clusterName = 4;
}

message GetObjectResponse {
    Object object = 1;
}

message GetReconciledObjectsRequest {
    string         automationName         = 1;
    string         namespace              = 2;
    string         automationKind         = 3;
    repeated       GroupVersionKind kinds = 4;
    string         clusterName            = 5;
}

message GetReconciledObjectsResponse {
    repeated UnstructuredObject objects = 1;
}

message GetChildObjectsRequest {
    GroupVersionKind groupVersionKind = 1;
    string           namespace        = 2;
    string           parentUid        = 3;
    string           clusterName      = 4;
}

message GetChildObjectsResponse {
    repeated UnstructuredObject objects = 1;
}

message GetFluxNamespaceRequest {}

message GetFluxNamespaceResponse {
  string name = 1;
}

message ListNamespacesRequest {}

message ListNamespacesResponse {
  repeated Namespace namespaces = 1;
}

message ListFluxEventsRequest {
    ObjectRef involvedObject = 2;
}

message ListFluxEventsResponse {
    repeated Event events = 1;
}

message SyncAutomationRequest {
    string         name        = 1;
    string         namespace   = 2;
    string         kind        = 3;
    string         clusterName = 4;
    bool           withSource  = 5;
}

message SyncAutomationResponse {
}

message GetVersionRequest {}

message GetVersionResponse {
    string semver    = 1;
    string commit    = 2;
    string branch    = 3;
    string buildTime = 4;
}

message GetFeatureFlagsRequest {}

message GetFeatureFlagsResponse {
    map<string, string> flags = 1;
}

message ToggleSuspendResourceRequest {
    string         kind        = 1;
    string         name        = 2;
    string         namespace   = 3;
    string         clusterName = 4;
    bool           suspend     = 5;
}

message ToggleSuspendResourceResponse {

}
