syntax = "proto3";

package gitops_core.v1;

option go_package = "github.com/weaveworks/weave-gitops/core/api";

message ObjectRef {
    string         kind      = 1;
    string         name      = 2;
    string         namespace = 3;
}

message Condition {
    string type = 1;
    string status = 2;
    string reason = 3;
    string message = 4;
    string timestamp = 5;
}

// GroupVersionKind represents an objects Kubernetes API type data
message GroupVersionKind {
    string group   = 1;
    string kind    = 2;
    string version = 3;
}

message Object {
    string object        = 1;
    string inventory     = 2;
    string clusterName   = 3;
}

message Deployment {
    string   name                 = 1;
    string   namespace            = 2;
    repeated Condition conditions = 3;
    repeated string images        = 4;
    bool     suspended            = 5;
    string   clusterName          = 6;
}

// UnstructuredObject is a Kubernetes object of an unknown type
message UnstructuredObject {
    GroupVersionKind groupVersionKind     = 1;
    string           name                 = 2;
    string           namespace            = 3;
    string           uid                  = 4;
    string           status               = 5;
    repeated         Condition conditions = 6;
    bool             suspended            = 7;
    string           clusterName          = 8;
    repeated         string images        = 9;
}

message Namespace {
  string name = 1;
  string status = 2;
  map<string, string> annotations = 3;
  map<string, string> labels = 4;
  string clusterName = 5;
}

message Event {
    string type      = 1;
    string reason    = 2;
    string message   = 3;
    string timestamp = 4;
    string component = 5;
    string host      = 6;
    string name      = 7;
}
